--- a/HFuse.cabal
+++ b/HFuse.cabal
@@ -1,59 +1,82 @@
-Name:                   HFuse
-Version:                0.2.5.0
-License:                BSD3
-License-File:           LICENSE
-Author:                 Jeremy Bobbio
-Maintainer:             Montez Fitzpatrick <montezf@gmail.com>
-Synopsis:               HFuse is a binding for the Linux FUSE library.
-Description:            Bindings for the FUSE library, compatible with Linux, OSXFUSE and FreeBSD.
-Homepage:               https://github.com/m15k/hfuse
-Category:               System
-Stability:              Experimental
-Cabal-Version:          >= 1.10
-Build-Type:             Simple
-Extra-source-files:     
-        CHANGELOG.md
-        README.md
+cabal-version: 1.12
 
-flag developer
-  default: False
+-- This file has been generated from package.yaml by hpack version 0.31.2.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: d510f069f564e5b397b430d3027c85e71e85506b5dc9c663456f927b21365862
 
-Library
-  Build-Depends:          base >= 4 && < 5, unix, bytestring
-  Exposed-Modules:        System.Fuse
-  Default-Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
-  Includes:               dirent.h, fuse.h, fcntl.h
-  Include-Dirs:           /usr/include, /usr/local/include, .
-  if os(darwin)
-      CC-Options:           "-DMACFUSE"
-      CC-Options:           "-DFUSE_USE_VERSION=26"
-      Include-Dirs:           /usr/local/include/osxfuse
-  else
-      if os(freebsd)
-         Includes:           sys/param.h, sys/mount.h
-         CC-Options:           "-Df_namelen=f_namemax"
-      else
-         Includes:               sys/statfs.h
-
-  if os(darwin)
-      Extra-Libraries:        osxfuse
-  else
-      Extra-Libraries:        fuse
-  Extra-Lib-Dirs:         /usr/local/lib
-  CC-Options:             "-D_FILE_OFFSET_BITS=64"
-  Default-Language:       Haskell2010
-
-executable HelloFS
-  if flag(developer)
-    buildable: True
-    build-depends:  base >= 4 && < 5, HFuse, unix, bytestring
-  else
-    buildable: False
-  main-is: HelloFS.hs
-  hs-source-dirs: examples
-  ghc-options: -threaded
-  Default-Language: Haskell2010
+name:           HFuse
+version:        0.2.5.0
+synopsis:       HFuse is a binding for the Linux FUSE library.
+description:    Bindings for the FUSE library, compatible with Linux, OSXFUSE and FreeBSD.
+category:       System
+stability:      Experimental
+homepage:       https://github.com/m15k/hfuse.git#readme
+bug-reports:    https://github.com/m15k/hfuse.git/issues
+author:         Jeremy Bobbio
+maintainer:     Montez Fitzpatrick <montezf@gmail.com>
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    CHANGELOG.md
+    README.md
 
 source-repository head
-    type:       git
-    location:   https://github.com/m15k/hfuse.git
+  type: git
+  location: https://github.com/m15k/hfuse.git
+
+flag developer
+  manual: False
+  default: False
+
+library
+  exposed-modules:
+      System.Fuse
+  other-modules:
+      Paths_HFuse
+  default-extensions: ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
+  cc-options: -D_FILE_OFFSET_BITS=64
+  include-dirs:
+      /usr/include
+      /usr/local/include
+      ./.
+  extra-lib-dirs:
+      /usr/local/lib
+  build-depends:
+      base >=4 && <5
+    , bytestring
+    , mtl
+    , unix
+  if os(osx)
+    cc-options: -DMACFUSE -DFUSE_USE_VERSION=26
+    include-dirs:
+        /usr/local/include/osxfuse
+  else
+    if os(freebsd)
+      cc-options: -Df_namelen=f_namemax
+  if os(osx)
+    extra-libraries:
+        osxfuse
+  else
+    extra-libraries:
+        fuse
+  default-language: Haskell2010
+
+executable HelloFS
+  main-is: HelloFS.hs
+  other-modules:
+      Paths_HFuse
+  hs-source-dirs:
+      examples
+  ghc-options: -threaded
+  if flag(developer)
+    build-depends:
+        HFuse
+      , base >=4 && <5
+      , bytestring
+      , unix
+  else
+    buildable: False
+  default-language: Haskell2010
