--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,8 @@ library:
   - ./.
   exposed-modules:
   - System.Fuse
+  - System.Fuse.Bindings
+  - System.Fuse.Types
   dependencies:
   - base >=4 && <5
   - unix
