--- a/package.yaml
+++ b/package.yaml
@@ -38,7 +38,7 @@ library:
   exposed-modules:
   - System.Fuse
   - System.Fuse.Bindings
-  - System.Fuse.Types
+  - System.Fuse.Main
   dependencies:
   - base >=4 && <5
   - unix
